--- a/tools/manager/index.html
+++ b/tools/manager/index.html
@@ -55,7 +55,7 @@
         
         <script src="/iui-js/iui.js"></script>
 
-        <script src="viewers/Esyur.Stores.MemoryStore.js"></script>        
+        <script src="viewers/Esiur.Stores.MemoryStore.js"></script>        
 
         <script src="js/browser.js"></script>        
         <script src="js/app.js"></script>
